# Chatbot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/backend/: main.py
src/frontend/: Home.py
