[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Angelo Gagno"}
]
readme = "README.md"
requires-python = "3.12.1"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "langchain (>=0.3.22,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "faiss-cpu (==1.8.0)",
    "chromadb (>=0.6.3,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
